--- a/templates/base-succeed.html
+++ b/templates/base-succeed.html
@@ -26,6 +26,7 @@
     <div role="main" class="main">
       <a href="#nav" class="nav-toggle">Menu</a>
       <p class="intro">个人中心</p>
+      <div style="clear:both;"></div>
       {% block content %}
       {% endblock %}
     </div>
