--- a/templates/notice.html
+++ b/templates/notice.html
@@ -12,6 +12,13 @@
 <h2>网站公告</h2>
 <ul class="list-unstyled">
   <li>
+  <blockquote class="pull-right">
+    <p><strong>gotit新版本更新日志</strong></p>
+    <p></p>
+    <small>zhwei -- 2013.10</small>
+  </blockquote>
+  </li>
+  <li>
   <blockquote class="pull-left">
     <p><strong>山东理工大学教务处教育技术中心小组,现面向大一同学纳新！</strong></p>
     <p><a href="http://jwch.sdut.edu.cn/blog/about/index.html">关于我们</a>！</p>
