--- a/templates/zheng.html
+++ b/templates/zheng.html
@@ -17,7 +17,7 @@
     <p><input type="password" id="pw" name="pw" class="form-control" placeholder="密码"/></p>
     <p>
       <input type="text" id="verify" name="verify" class="form-control" placeholder="验证码" style="width:50%; float:left;"/>
-      <img style="" src="/static/pic/{{ time_md5 }}.gif" alt=""/>
+      <img style="" src="{{ checkcode }}" alt=""/>
     </p>
     <p>
       <select id="type" name="type" class="selectpicker">
@@ -26,7 +26,6 @@
         <option value="3">课表查询</option>
       </select>
     </p>
-    <input type="hidden" value="{{ time_md5 }}" name="time_md5"/>    
     <br>
   <center>
     <button type="submit" class="btn btn-primary">查询</button>&nbsp;
