main func is ok , apis wait test

--- a/templates/base-new.html
+++ b/templates/base-new.html
@@ -74,7 +74,9 @@
             <ul class="dropdown-menu">
               <li><a href="/succeed">个人中心</a></li>
               <li class="divider"></li>
-              <li><a href="#">学分</a></li>
+              <li><a href="/succeed">学分</a></li>
+              <li class="divider"></li>
+              <li><a href="/logout">注销</a></li>
             </ul>
           </li>
         {% else %}
