--- a/templates/base-succeed.html
+++ b/templates/base-succeed.html
@@ -8,9 +8,10 @@
     </title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
-    <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="stylesheet" href="/static/css/styles2.css">
     <link rel="stylesheet" href="/static/css/responsive-nav.css">
     <script src="/static/js/responsive-nav.min.js"></script>
+    <script src="/static/js/jquery.min.js"></script>  
 
 
   </head>
