--- a/templates/js.html
+++ b/templates/js.html
@@ -5,4 +5,5 @@
 <script src="/static/js/jquery.min.js"></script>	
 <script src="/static/js/bootstrap.min.js"></script>
 <script src="/static/js/bootstrap-select.min.js"></script>
+<script src="/static/js/stacktable.js"></script>
 
