--- a/templates/input_error.html
+++ b/templates/input_error.html
@@ -1,4 +1,4 @@
 {% extends "base-search.html" %}
 {% block content %}
-<script type="text/javascript">alert("输入不合理!");top.location="/zheng"</script>
+<script type="text/javascript">alert("输入不合理!");top.location="/login"</script>
 {% endblock %}
