server run updates

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
 
 {% block content %}
 <div class="jumbotron">
-  <a class="btn btn-large btn-success" href="#">我们为你Got it .</a>
-  <p class="lead"></p>
+  <a class="btn btn-large btn-success" href="http://new.gotit.asia">新版Got it .</a>
+  <p class="lead">新版gotit，为手机访问做了定向优化，使用大量缓存，提高查询速度，敬请斧正！</p>
 </div>
 
 <hr>
