--- a/templates/donate.html
+++ b/templates/donate.html
@@ -12,7 +12,7 @@
 {% block content %}
 
 <div class="jumbotron">
-  <a href="https://me.alipay.com/zhweifcx" target="_blank"><img src="/static/img/alipay.png"></a>
+   <a href='http://me.alipay.com/zhweifcx'> <img src='https://img.alipay.com/sys/personalprod/style/mc/btn-index.png' /> </a>
   <p class="lead"></p>
 </div>
 
