--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,11 +1,11 @@
-      <div style="clear: both;"></div><hr>
+      <div style="clear: both;"></div>
       <div class="footer">
         <center>
           <a href="/api" target="_blank">APIs</a>&nbsp;
           Power by <a href="http://webpy.org/" target="_blank">web.py</a>&nbsp;
           <a href="http://python.org/" target="_blank">python</a>&nbsp;
           <a href="http://sdutlinux.org" target="_blank">SLUG</a>&nbsp;
-          Author:<a href="http://zhwei.42qu.com" target="_blank">zhwei</a>&nbsp;
+          Author:<a href="http://zhangweide.cn" target="_blank">zhwei</a>&nbsp;
           Version:2.0
         </center>
         <!-- baidu sitecenter   -->
