use requests replace urllib

--- a/templates/zheng.html
+++ b/templates/zheng.html
@@ -26,8 +26,8 @@
   </tr>
   <tr>
     <th><label for="number">验证码:</label></th>
-    <td><span><input type="text" id="verify" name="verify" class="input-small"/></span>&nbsp;
-      <span><img style="position:absolute;" src="{{ checkcode }}" alt="" height="35" width="92"/></span>
+    <td><span><input type="text" id="verify" name="verify" style="width:50%; float:left;"/></span>&nbsp;
+      <span><img style="position:absolute; float:right;" src="{{ checkcode }}"/></span>
     </td>
   
   </tr>
