--- a/templates/base-index.html
+++ b/templates/base-index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="山东理工大学,成绩查询,校外,正方教务系统,四六级成绩查询,学分绩点,考试时间地点,课表,本学期,查询">
     <meta name="description" content="山东理工大学校外成绩查询,学分绩点查询,四六级成绩查询.">
     <meta name="author" content="ma6174,zhwei">
+    <meta property="wb:webmaster" content="0c9867e1232b2dd4" />
 
     <!-- Le styles -->
     {% include "css.html" %}
