--- a/templates/base-result.html
+++ b/templates/base-result.html
@@ -51,12 +51,20 @@
         <div>
           <center>如果我们做的对您有所帮助, 请考虑是否<a href="/donate.html">赞助</a>我们</center>
           <hr />
+          <p>查询更多：
+            <a class="btn btn-primary" href='/more/zheng'>成绩</a>
+            <a class="btn btn-info" href='/more/kebiao'>课表</a>
+            <a class="btn btn-inverse" href='/more/kaoshi'>考试时间</a>
+            <a class="btn btn-success" href='/more/score'>绩点&总成绩</a>
+            <a class="btn" href='/more/oldcet'>往年CET</a>
+          </p>
+          <hr />
         </div>
 
         {% block content %}
 
         {% endblock %}
-        
+        <hr />
         {% include "footer.html" %}
       </div> <!-- /container -->
 
