--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,7 @@
 <div class="row-fluid marketing">
   <div class="span6">
     <div class="well" onclick="location.href='/zheng';" style="cursor:pointer;">
+
       <h4><a href="/zheng">本学期课表 成绩 考试时间</a></h4>
       <p>查询本学期课表 成绩以及考试时间.</p>
       {% if alert %}
@@ -29,8 +30,19 @@
     </div>
     <div class="well" onclick="location.href='/cet';" style="cursor:pointer;">
       <h4><a href="/cet">四六级成绩查询</a></h4>
-      <p>刚刚考完的四六级成绩出来了!!从这里可以查询!!!.</p>
+      <p>最新四六级成绩查询.</p>
     </div>
+
+    <div class="well" onclick="location.href='/libr';" style="cursor:pointer;">
+      <h4><a href="/libr">图书馆借书查询</a></h4>
+      <p>在图书馆借了那些书，超期了没有？</p>
+    </div>
+
+    <div class="well" onclick="location.href='/404';" style="cursor:pointer;">
+      <h4><a href="/404">公益404页面</a></h4>
+      <p></p>
+    </div>
+
   </div>
 
   <div class="span6">
@@ -40,10 +52,15 @@
     </div>
   </div>
   <div class="span6">
+
+    <div class="well" onclick="location.href='/cet/old';" style="cursor:pointer;">
+      <h4><a href="/cet/old">往年四六级成绩</a></h4>
+      <p>往年四六级成绩查询，看看你的战绩！</p>
+    </div>
     <div class="well" onclick="location.href='/donate.html#names';" style="cursor:pointer;">
       <h4><a href="/donate.html#names">网站赞助者名单</a></h4>
       <p>您的每一分钱都会让<strong>Gotit</strong>做得更好!</p>
-    </div>
+    </div>    
   </div>
 </div>
 {% endblock %}
