--- a/templates/base-result.html
+++ b/templates/base-result.html
@@ -24,29 +24,32 @@
 
   <body>
 
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+    <nav class="navbar navbar-inverse navbar-fixed-top bs-navbar" role="navigation">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+            <span class="sr-only">Gotit</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="/">Got it</a>
-          <div class="nav-collapse">
-            <ul class="nav">
-              <li><a href="/">首页</a></li>
-              <li><a href="/score">绩点·成绩</a></li>
-              <li><a href="/cet">CET</a></li>
-              <li><a href="/notice.html" >公告</a></li>
-              <li class="active"><a href="#">查询结果</a></li>
-              <li><a href="/contact.html" >联系我们</a></li>
-              <li><a href="/comment.html" >留言</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
+          </button>
+          <a class="navbar-brand" href="/">Gotit</a>
         </div>
-      </div>
-    </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="/">首页</a></li>
+            <li><a href="/score">绩点·成绩</a></li>
+            <li><a href="/cet">CET</a></li>
+            <li><a href="/notice.html">公告</a></li>
+            <li><a href="/contact.html">联系我们</a></li>
+            <li><a href="/comment.html">留言</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+          </ul>
+        </div><!-- /.navbar-collapse -->
+    </nav>
+
+    
       <div id="container" class= "container">
         <div>
           <center>如果我们做的对您有所帮助, 请考虑是否<a href="/donate.html">赞助</a>我们</center>
@@ -54,9 +57,9 @@
           <p>查询更多：
             <a class="btn btn-primary" href='/more/zheng'>成绩</a>
             <a class="btn btn-info" href='/more/kebiao'>课表</a>
-            <a class="btn btn-inverse" href='/more/kaoshi'>考试时间</a>
+            <a class="btn btn-warning" href='/more/kaoshi'>考试时间</a>
             <a class="btn btn-success" href='/more/score'>绩点&总成绩</a>
-            <a class="btn" href='/more/oldcet'>往年CET</a>
+            <a class="btn btn-default" href='/more/oldcet'>往年CET</a>
           </p>
           <hr />
         </div>
@@ -64,9 +67,8 @@
         {% block content %}
 
         {% endblock %}
-        <hr />
         {% include "footer.html" %}
       </div> <!-- /container -->
-
+      {% include "js.html" %}
       </body>
     </html>
