--- a/templates/base-search.html
+++ b/templates/base-search.html
@@ -48,46 +48,56 @@
   </head>
 
   <body>
-
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+    <nav class="navbar navbar-inverse navbar-fixed-top bs-navbar" role="navigation">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+            <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="http://gotit.asia/">Got it</a>
-          <div class="nav-collapse">
-            <ul class="nav">
-              <li><a href="/">首页</a></li>
-              <li><a href="/score">绩点·成绩</a></li>
-              <li><a href="/cet">CET</a></li>
-              <li><a href="/notice.html">公告</a></li>
-              <li><a href="/contact.html">联系我们</a></li>
-              <li><a href="/comment.html">留言</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
+          </button>
+          <a class="navbar-brand" href="/">Gotit</a>
         </div>
-      </div>
-    </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="/">首页</a></li>
+            <li><a href="/score">绩点·成绩</a></li>
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#">更多<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="/libr">图书馆余书查询</a></li>
+                <li><a href="/cet">CET</a></li>
+                <li><a href="/cet/old">往年CET成绩</a></li>
+                <li class="divider"></li>
+                <li><a href="/notice.html">公告</a></li>
+                <li><a href="/contact.html">联系我们</a></li>
+              </ul>
+            </li>
+            <li><a href="/comment.html">留言</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+          </ul>
+        </div><!-- /.navbar-collapse -->
+    </nav>
 
-    <div id="container" class= "container-fluid"><br>
+    <div id="container" class= "container"><br>
 
       {% block content %}
 
       {% endblock %}
 
 
-        <hr>
-        {% include "footer.html" %}
+      {% include "footer.html" %}
 
       </div> <!-- /container -->
-
+      
       {% include "js.html" %}
 
+      {% block foot %}
+         
+      {% endblock %} 
+
       <!-- baidu sitecenter   -->
-
-
       </body>
     </html>
