--- a/templates/index.html
+++ b/templates/index.html
@@ -10,14 +10,14 @@
 
 {% block content %}
 <div class="jumbotron">
-  <a class="btn btn-large btn-success" href="">Got It </a>
+  <p><a class="btn btn-large btn-success" href="">Got It</a></p>
   <p class="lead">预祝同学们寒假开心，新年快乐！</p>
 </div>
 
 <hr>
 
-<div class="row-fluid marketing">
-  <div class="span6">
+<div class="row marketing">
+  <div class="col-lg-6">
     <div class="well" onclick="location.href='/zheng';" style="cursor:pointer;">
 
       <h4><a href="/zheng">本学期课表 成绩 考试时间</a></h4>
@@ -45,13 +45,13 @@
 
   </div>
 
-  <div class="span6">
+  <div class="col-lg-6">
     <div class="well" onclick="location.href='/score';" style="cursor:pointer;">
       <h4><a href="/score">总成绩 学分绩点</a></h4>
       <p>查询入学以来所有成绩,包括第二专业和补考成绩以及平均学分绩点.</p>
     </div>
   </div>
-  <div class="span6">
+  <div class="col-lg-6">
 
     <div class="well" onclick="location.href='/cet/old';" style="cursor:pointer;">
       <h4><a href="/cet/old">往年四六级成绩</a></h4>
