--- a/templates/notfound.html
+++ b/templates/notfound.html
@@ -5,12 +5,16 @@
 {% block nav %}
 <li><a href="/">首页</a></li>
 <li><a href="/notice.html">公告</a></li>
-<li class="active"><a href="/comment.html">留言</a></li>
+<li><a href="/comment.html">留言</a></li>
 <li><a href="/donate.html">赞助</a></li>
 {% endblock %}
 
 {% block content %}
 
+<div class="row col-lg-6">
+
 <script type="text/javascript" src="http://www.qq.com/404/search_children.js?edition=small" charset="utf-8"></script>
+
+</div>
 
 {% endblock %}
