--- a/templates/result.html
+++ b/templates/result.html
@@ -22,11 +22,15 @@
 {% else %}
 {% endif %}
 
-<table border="1" class= "table table-striped table-bordered table-condensed">
+<div class="table-responsive">
+
+<table class= "table table-striped table-bordered table-condensed">
   {% for i in table %}
   {{i}}
   {% endfor %}
 </table>
+
+</div>
 <h2 id="error">{{ error }}</h2>
 
 {% endblock content %}
