--- a/templates/result.html
+++ b/templates/result.html
@@ -4,6 +4,9 @@
 {% block content %}
 
 {% if jidian %}
+
+<div class="table-responsive">
+
 <table border="1" class= "table table-striped table-bordered table-condensed">
   <tr>
     <td>
@@ -17,6 +20,7 @@
     </td>
   </tr>
 </table>
+</div>
 <h3>各科成绩</h3>
 <hr />
 {% else %}
