--- a/templates/result_dic.html
+++ b/templates/result_dic.html
@@ -2,6 +2,9 @@
 
 
 {% block content %}
+
+<div class="table-responsive">
+
   <table border="1" class= "table table-striped table-bordered table-condensed">
     <tr>
       {% for i in items %}
@@ -14,4 +17,6 @@
       {% endfor %}
     </tr>
   </table>
+</div>
+
 {% endblock %}
