--- a/templates/notice.html
+++ b/templates/notice.html
@@ -12,6 +12,15 @@
 <h2>网站公告</h2>
 <ul class="list-unstyled">
   <li>
+  <blockquote class="pull-right">
+    <p>	优化了移动端表格的显示样式，完善错误处理，优化了抓取机制。 </p>
+    <p>	升级了前端框架，使用Bootstrap-3.0.3。 </p>
+    <p>	由于前一段时间上线的新版bug较多，已下线。 </p>
+    <p>	使用体验可以前往<a href='/comment.html'>留言</a>。 </p>
+    <small>zhwei -- 2014.1.19-16:19</small>
+  </blockquote>
+  </li>
+  <li>
   <blockquote class="pull-left">
     <p><strong>山东理工大学教务处教育技术中心小组,现面向大一同学纳新！</strong></p>
     <p><a href="http://jwch.sdut.edu.cn/blog/about/index.html">关于我们</a>！</p>
