--- a/templates/zheng.html
+++ b/templates/zheng.html
@@ -21,6 +21,7 @@
     </p>
     <p>
       <select id="type" name="type" class="selectpicker">
+        <option value="4">最新课表</option>
         <option value="1">成绩查询</option>
         <option value="2">考试时间查询</option>
         <option value="3">课表查询</option>
