some change on server

--- a/templates/base-index.html
+++ b/templates/base-index.html
@@ -12,6 +12,14 @@
 
     <!-- Le styles -->
     {% include "css.html" %}
+<script language="javascript">
+	if (self!=top) window.top.location.replace(self.location);
+</script>
+
+    {% block head %}
+
+    {% endblock %}
+
     <style type="text/css">
       body {
         padding-top: 20px;
