--- a/templates/base-search.html
+++ b/templates/base-search.html
@@ -10,6 +10,11 @@
 
     <!-- Le styles -->
     {% include "css.html" %}
+
+<script language="javascript">
+	if (self!=top) window.top.location.replace(self.location);
+</script>
+
     <style type="text/css">
       body {
         padding-top: 40px;
