--- a/templates/internalerror.html
+++ b/templates/internalerror.html
@@ -15,6 +15,6 @@
 <h1>500</h1>
 <p>糟糕！出问题了！！</p>
 </div>
-<p>网站升级, 请清空cookie</p>
+<p>最近正方教务系统以及成绩查询系统不能正常访问，所以网站可能不能正常服务，谢谢支持！</p>
 
 {% endblock %}
