--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
       <p>查询本学期课表 成绩以及考试时间.</p>
       {% if alert %}
       <div class="alert alert-info">
-        <p>{{ alert }}</p>
+        <p>{{ alert.content }}</p>
       </div>
       {% endif %}
     </div>
