--- a/templates/zheng.html
+++ b/templates/zheng.html
@@ -7,7 +7,7 @@
 <form name="main" method="post" accept-charset="utf-8" class="form-signin">
   {% if alert %}
   <div class="alert alert-info">
-    <p>{{ alert }}</p>
+    <p>{{ alert.content }}</p>
   </div>
   {% endif %}
 
