--- a/templates/donate.html
+++ b/templates/donate.html
@@ -39,8 +39,8 @@
     <tbody>
       {% for sp in sponsor %}
       <tr>
-        <th>{{ sp[0] }}</th>
-        <td>{{ sp[1] }}&nbsp;元</td>
+        <th>{{ sp.name }}</th>
+        <td>{{ sp.much }}&nbsp;元</td>
       </tr>
       {% endfor %}
     </tbody>
