--- a/templates/notice.html
+++ b/templates/notice.html
@@ -20,7 +20,7 @@
         <i class="glyphicon glyphicon-calendar"></i> {{ new.datetime }}</p>
     </p>
   </div>
-  <div class="clearfix"></div>
+  <div class="clearfix"><br /><br /><br /></div>
   {% endfor %}
 </ul>
 {% endblock %}
