--- a/templates/apis.html
+++ b/templates/apis.html
@@ -1,11 +1,11 @@
 {% extends "base-index.html" %}
 
 {% block title %}
-apis
+Apis
 {% endblock %}
 
 {% block content %}
-  <h3>api文档</h3>
+  <h3>接口文档</h3>
   <a href="https://github.com/zhwei/gotit/blob/gunicorn/doc/api.markdown" 
     target="_blank">https://github.com/zhwei/gotit/blob/gunicorn/doc/api.markdown</a>
 {% endblock %}
